--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/category_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/category_form.html
@@ -23,21 +23,20 @@
 		</div>
 
 		<form th:action="@{/category/save}" method="post"
-			style="max-width: 700px; margin: 0 auto" 
-			enctype="multipart/form-data"
-			th:object="${category}">
-			<input type="hidden" th:field ="*{id}">
+			style="max-width: 500px; margin: 0 auto"
+			enctype="multipart/form-data" th:object="${category}">
+			<input type="hidden" th:field="*{id}">
 			<div class="border border-secondary rounded p-3">
 
 				<div class="form-group row">
 					<label class="col-sm-4 col-form-label">Category Name:</label>
 					<div class="col-sm-8">
-					<input type="text" class="form-control" th:field="*{name}"
-					required minlength="3" maxlength="128" />
+						<input type="text" class="form-control" th:field="*{name}"
+							required minlength="3" maxlength="128" />
 					</div>
 				</div>
 
-				<div class="form-group row">
+				<div class="form-group row mt-2">
 					<label class="col-sm-4 col-form-label">Alias:</label>
 					<div class="col-sm-8">
 						<input type="text" class="form-control" th:field="*{alias}"
@@ -47,32 +46,39 @@
 
 				<div class="form-group row">
 					<label class="col-sm-4 col-form-label">Parent Category:</label>
-					<div class="col-sm-8">
-					<select>
-					
-					</select>
+					<div class="col-sm-8 mt-2">
+						<select class="form-control" th:field="*{parent}">
+							<option value="0">[No Parent]</option>
+							<th:block th:each="cat : ${listCategories}">
+							<option th:value="${cat.id}">[[${cat.name}]]</option>
+							</th:block>
+						</select>
 					</div>
 				</div>
-			
+
 
 				<div class="form-group row">
-					<label class="col-sm-4 col-form-label">Enabled:</label>
-					<div class="col-sm-8">
-						<input type="checkbox" th:field=*{enabled} />
-					</div>
-				</div>
-				
-				<div class="form-group row"> 
 					<label class="col-sm-4 col-form-label">Image:</label>
-					<div class="col-sm-8">
-						<input type="hidden" th:field ="*{image}"/>
-						<input type="file" id="fileImage" name="image" accept="image/png, image/jpeg"
-						class="mb-2"/>
-						<img id="thumbnail" alt="image Review" 
-						class="img-fluid"/>
-					
+					<div class="col-sm-8 mt-2">
+						<input type="hidden" th:field="*{image}" /> <input type="file"
+							id="fileImage" name="image" accept="image/png, image/jpeg"
+							class="mb-2" />
+
+						<div class="mt-2">
+							<img id="thumbnail" alt="image Review"
+								th:src="@{/images/image-thumbnail.png}" class="img-fluid" />
+						</div>
+
+						<div class="form-group row">
+							<label class="col-sm-4 col-form-label">Enabled:</label>
+							<div class="col-sm-8">
+								<input type="checkbox" th:field=*{enabled} />
+							</div>
+						</div>
+
+
 					</div>
-				
+
 				</div>
 
 				<div class="text-center">
@@ -85,40 +91,38 @@
 
 		<div class="modal fade" id="modalDialog" tabindex="-1">
 			<div class="modal-dialog modal-dialog-centered">
-			<div class="modal-content text-center">
-				<div class="modal-header">
-					<h4 class="modal-title" id="modalTitle">Warning</h4>
-					<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-				</div>
-				<div class="modal-body">
-					<span id="modalBody"></span>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-				</div>
+				<div class="modal-content text-center">
+					<div class="modal-header">
+						<h4 class="modal-title" id="modalTitle">Warning</h4>
+						<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+					</div>
+					<div class="modal-body">
+						<span id="modalBody"></span>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-danger"
+							data-bs-dismiss="modal">Close</button>
+					</div>
 				</div>
 			</div>
 		</div>
 
-			<div th:replace="fragments :: footer"></div>
+		<div th:replace="fragments :: footer"></div>
 	</div>
 
 	<script type="text/javascript">
-	
-		moduleURL="[[@{/categories}]]";
-		
-	
-	
-	function showModalDialog(title,message){
-		document.getElementById("modalTitle").textContent = title;
-		document.getElementById("modalBody").textContent = message;
+		moduleURL = "[[@{/categories}]]";
 
-		const modalEl = document.getElementById("modalDialog");
-		const modal = bootstrap.Modal.getOrCreateInstance(modalEl);
-		modal.show();
+		function showModalDialog(title, message) {
+			document.getElementById("modalTitle").textContent = title;
+			document.getElementById("modalBody").textContent = message;
 
-	}
-</script>
-<script th:src="@{/js/common_form.js}"></script>
+			const modalEl = document.getElementById("modalDialog");
+			const modal = bootstrap.Modal.getOrCreateInstance(modalEl);
+			modal.show();
+
+		}
+	</script>
+	<script th:src="@{/js/common_form.js}"></script>
 </body>
 </html>
