--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/category_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/category_form.html
@@ -50,7 +50,7 @@
 						<select class="form-control" th:field="*{parent}">
 							<option value="0">[No Parent]</option>
 							<th:block th:each="cat : ${listCategories}">
-							<option th:value="${cat.id}">[[${cat.name}]]</option>
+								<option th:value="${cat.id}">[[${cat.name}]]</option>
 							</th:block>
 						</select>
 					</div>
@@ -61,7 +61,7 @@
 					<label class="col-sm-4 col-form-label">Image:</label>
 					<div class="col-sm-8 mt-2">
 						<input type="hidden" th:field="*{image}" /> <input type="file"
-							id="fileImage" name="image" accept="image/png, image/jpeg"
+							id="fileImage" name="fileImage" accept="image/png, image/jpeg"
 							class="mb-2" />
 
 						<div class="mt-2">
@@ -69,13 +69,13 @@
 								th:src="@{/images/image-thumbnail.png}" class="img-fluid" />
 						</div>
 
-						<div class="form-group row">
-							<label class="col-sm-4 col-form-label">Enabled:</label>
-							<div class="col-sm-8">
-								<input type="checkbox" th:field=*{enabled} />
-							</div>
-						</div>
+					</div>
 
+					<div class="form-group row">
+						<label class="col-sm-4 col-form-label">Enabled:</label>
+						<div class="col-sm-8">
+							<input type="checkbox" th:field=*{enabled} />
+						</div>
 
 					</div>
 
@@ -111,17 +111,8 @@
 	</div>
 
 	<script type="text/javascript">
-		moduleURL = "[[@{/categories}]]";
+		moduleURL = "[[@{/category}]]";
 
-		function showModalDialog(title, message) {
-			document.getElementById("modalTitle").textContent = title;
-			document.getElementById("modalBody").textContent = message;
-
-			const modalEl = document.getElementById("modalDialog");
-			const modal = bootstrap.Modal.getOrCreateInstance(modalEl);
-			modal.show();
-
-		}
 	</script>
 	<script th:src="@{/js/common_form.js}"></script>
 </body>
