--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/category.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/category.html
@@ -52,7 +52,9 @@
 			<tbody>
 				<tr th:each="category : ${listCategories}">
 					<td>[[${category.id}]]</td>
-					<td></td>
+					<td>
+						<img th:src="@{${category.ImagePath}}" style="width:100px" class="img-fluid"/>
+					</td>
 					<td>[[${category.name}]]</td>
 					<td>[[${category.alias}]]</td>
 			
