update category edit

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/category.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/category.html
@@ -61,7 +61,7 @@
 					<td><a class="fas fa-check-circle fa-2x icon-green"></a> 
 					<a class="fas fa-times-circle fa-2x icon-dark"></a></td>
 
-					<td><a th:href="@{/categories/new}" 
+					<td><a th:href="@{'/category/edit/'+${category.id}}" 
 					 class="fas fa-edit fa-2x icon-green"></a>
 					&nbsp; <a class="fas fa-trash fa-2x icon-dark link-delete"></a></td>
 				</tr>
