--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/category_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/category_form.html
@@ -66,7 +66,7 @@
 
 						<div class="mt-2">
 							<img id="thumbnail" alt="image Review"
-								th:src="@{/images/image-thumbnail.png}" class="img-fluid" />
+								th:src="@{${category.imagePath}}" class="img-fluid" />
 						</div>
 
 					</div>
