--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/category_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/category_form.html
@@ -24,7 +24,8 @@
 
 		<form th:action="@{/category/save}" method="post"
 			style="max-width: 500px; margin: 0 auto"
-			enctype="multipart/form-data" th:object="${category}">
+			enctype="multipart/form-data" th:object="${category}"
+			onsubmit="return checkUnique(this)">
 			<input type="hidden" th:field="*{id}">
 			<div class="border border-secondary rounded p-3">
 
@@ -88,31 +89,42 @@
 				</div>
 			</div>
 		</form>
-
-		<div class="modal fade" id="modalDialog" tabindex="-1">
-			<div class="modal-dialog modal-dialog-centered">
-				<div class="modal-content text-center">
-					<div class="modal-header">
-						<h4 class="modal-title" id="modalTitle">Warning</h4>
-						<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-					</div>
-					<div class="modal-body">
-						<span id="modalBody"></span>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-danger"
-							data-bs-dismiss="modal">Close</button>
-					</div>
-				</div>
-			</div>
-		</div>
+		
+		<div th:replace="modal_fragment :: modal_dialog"></div>			
 
 		<div th:replace="fragments :: footer"></div>
-	</div>
+	</div> 
 
 	<script type="text/javascript">
 		moduleURL = "[[@{/category}]]";
 
+		function checkUnique(form){
+			catId = $("#id").val();
+			catName = $("#name").val();
+			catAlias = $("#alias").val();
+	
+			csrfValue = $("input[name='_csrf']").val();
+
+			url = "[[@{/category/check_unique}]]";
+			
+			params = {id: catId, name: catName, alias: catAlias, _csrf: csrfValue};
+			$.post(url,params,function(response){
+				if(response == "OK"){
+					form.submit();
+				}else if(response == "Duplicate Name"){
+					showWarningModal("There is antoher category having same name "+ catName);
+				}else if(response == "Duplicate Alias"){
+					showWarningModal("There is antoher category having same alias "+ catAlias);
+				}else{
+					showErrorModal("Unknown response from server");
+				}
+			}).fail(function(){
+				showErrorModal("Could not conncet to the server");
+			})
+			return false;
+		}
+		
+		
 	</script>
 	<script th:src="@{/js/common_form.js}"></script>
 </body>
