--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/category.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/category.html
@@ -60,20 +60,28 @@
 					</td>
 					<td>[[${category.name}]]</td>
 					<td>[[${category.alias}]]</td>
-			
-					<td><a class="fas fa-check-circle fa-2x icon-green"></a> 
-					<a class="fas fa-times-circle fa-2x icon-dark"></a></td>
-
-					<td><a th:href="@{'/category/edit/'+${category.id}}" 
-					 class="fas fa-edit fa-2x icon-green"></a>
-					&nbsp; <a class="fas fa-trash fa-2x icon-dark link-delete"></a></td>
+					<td>
+						<div th:replace="fragments :: category_status"></div>
+					</td>
+					<td><div th:replace="fragments :: category_actions"></div></td>
 				</tr>
 			</tbody>
 		</table>
-	</div>
+
+	<div th:replace="modal_fragment :: confirm_modal"></div>
 
 	<div th:replace="fragments :: footer"></div>
-
+</div>
+<script th:src="@{/js/common_list.js}"></script>
+<script type="text/javascript">
+	moduleURL = "[[@{/category}]]";
 	
+	$(document).ready(function(){
+		$(".link-delete").on("click",function(e){
+			e.preventDefault();
+			showDeleteConfirmModal($(this),'category');
+		});
+	});
+</script>
 </body>
 </html>
