--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments.html
@@ -29,9 +29,14 @@
 	</th>
 
 	
-	<a th:fragment="page_link(pageNum,label)"
+	<a th:fragment="page_link(moduleURL,pageNum,label)"
 	class="page-link"
-	th:href="@{'/users/page/'+${pageNum}+'?sortField=' +${sortField} + '&sortDir='+${sortDir}+ ${keyword !=null?'&keyword='+keyword:''}}">[[${label}]]</a>
+	th:href="@{__${moduleURL}__/page/{pageNum}(
+			pageNum =${pageNum},
+			sortField=${sortField},
+			sortDir=${sortDir},
+			keyword=${keyword}
+			)}">[[${label}]]</a>
 
 <div th:fragment="footer" class="text-center m-3">
 			<p>Shopme Control Panel - Copyright &copy; Shopme</p>
@@ -50,7 +55,7 @@
 		</div>
 		
 		<div th:fragment="category_actions" th:remove="tag">
-			<a class="fas fa-edit fa-2x icon-green" th:href="@{'/category/edit'+${category.id}}"
+			<a class="fas fa-edit fa-2x icon-green" th:href="@{'/category/edit/'+${category.id}}"
 			title="Edit this category"></a>
 			&nbsp;
 			
@@ -62,5 +67,47 @@
 			</th:block>
 					
 		</div>
+		
+	<div th:fragment="pagination(moduleURL,entityName)" th:remove="tag">
+	<div class="text-center m-1" th:if="${totalItems > 0}">
+			<span>Showing [[${entityName}]] # [[${startCount}]] to [[${endCount}]] of
+				[[${totalItems}]]</span>
+		</div>
+		<div class="text-center m-1" th:unless="${totalItems > 0}">
+			<span>No [[${entityName}]] Found</span>
+		</div>
+		<div th:if="${totalPages > 1}">
+			<nav>
+				<ul class="pagination justify-content-center flex-wrap">
+					<li
+						th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+						<a th:replace="fragments :: page_link(${moduleURL},1,'First')"></a>
+					</li>
+
+					<li
+						th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+						<a
+						th:replace="fragments :: page_link(${moduleURL},${currentPage - 1}, 'Previous')"></a>
+					</li>
+
+
+					<li
+						th:class="${currentPage !=i ? 'page-item' : 'page-item active'}"
+						th:each="i :${#numbers.sequence(1,totalPages)}"><a
+						th:replace="fragments :: page_link(${moduleURL},${i},${i})"></a></li>
+
+					<li
+						th:class="${currentPage < totalPages ? 'page-item' :'page-item disabled'}">
+						<a th:replace="fragments :: page_link(${moduleURL},${currentPage +1},'Next')"></a>
+					</li>
+					<li
+						th:class="${currentPage < totalPages ? 'page-item' :'page-item disabled'}">
+						<a th:replace="fragments :: page_link(${moduleURL},${totalPages},'Last')"></a>
+					</li>
+				</ul>
+			</nav>
+		</div>
+	
+	</div>	
 </body>
 </html>
